<resources>
    <string name="app_name">YouTubeProject</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="popular_videos">Most Popular Videos</string>
    <string name="channel_category">Channels By Category</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">My\nPlayList!</string>
    <string name="login_autologin">자동 로그인</string>
    <string name="login_pw">비밀번호</string>
    <string name="login_id">아이디</string>
    <string name="login_login">로그인</string>
    <string name="signup">회원가입</string>
    <string name="signup_name">이름</string>

    <string name="search_bar_hint">검색어를 입력하세요.</string>
    <string name="search_result_empty_text">검색 결과가 없습니다.\n다른 키워드로 검색해주세요.</string>
    <string name="search_result_fail_text">요청에 실패했습니다.\n다시 시도해 주세요.</string>


    <string name="menu_home_title">홈</string>
    <string name="menu_search_title">검색</string>
    <string name="menu_playlist_title">재생 목록</string>
    <string name="menu_my_page_title">마이 페이지</string>
    <string name="playlist_title_text">재생 목록</string>
    <string name="playlist_empty_text">재생 목록이 없습니다.\n</string>
    <string name="video_empty_text">재생 목록이 비어있습니다.\n</string>
    <string name="playlist_detail_title_text">재생 목록: %s</string>
    <string name="video_views_text">조회수 %d회</string>
    <string name="video_past_text">%s 전</string>
    <string name="playlist_number_text">영상 %d개</string>

    <string name="save_playlist_success_message">플레이리스트를 저장하였습니다.</string>
    <string name="create_playlist_success_message">새 플레이리스트를 생성하였습니다.</string>
    <string name="playlist_failure_message">실패하였습니다. 나중에 다시 이용해주세요.</string>

    <string name="create_playlist_dialog_title">새 플레이리스트 생성</string>
    <string name="dialog_confirm_text">확인</string>
    <string name="dialog_cancel_text">취소</string>

    <string name="category">카테고리</string>
    <string name="delete_playlist_dialog_title">해당 플레이리스트를 삭제할까요?</string>
    <string name="delete_playlist_success_message">해당 플레이리스트를 삭제하였습니다.</string>
    <string name="delete_video_success_message">해당 영상을 삭제하였습니다.</string>
    <string name="add_videos_dialog_title">추가할 영상을 고르세요.</string>
    <string-array name="category_options">
        <item>카테고리 1</item>
        <item>카테고리 2</item>
    </string-array>


</resources>