<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".presentation.ui.fragment.LoginFragment">


    <TextView
        android:id="@+id/login_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="112dp"
        android:gravity="center|left"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="48dp"
        android:layout_marginTop="128dp"
        android:layout_marginLeft="8dp"
        android:fontFamily="@font/jsmath_cmti10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/login_iv_logo"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/login_iv_logo"
        android:layout_width="112dp"
        android:layout_height="112dp"
        android:layout_marginTop="128dp"
        android:layout_marginRight="8dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toStartOf="@+id/login_tv_title"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_cl_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/login_corner_box_blue"
        android:padding="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_tv_title">

        <LinearLayout
            android:id="@+id/login_ll_etcontainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_corner_box_white"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/login_et_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/login_id"
                android:maxLines="1"
                android:padding="12dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/start_button" />

            <EditText
                android:id="@+id/login_et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/login_pw"
                android:maxLines="1"
                android:inputType="textPassword"
                android:padding="12dp" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/login_cb_autologin"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/login_checkbox_selector"
            android:button="@null"
            app:layout_constraintBottom_toTopOf="@+id/login_btn_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/login_tv_autologin"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_ll_etcontainer" />

        <TextView
            android:id="@+id/login_tv_autologin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:paddingLeft="8dp"
            android:text="@string/login_autologin"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/login_btn_login"
            app:layout_constraintStart_toEndOf="@+id/login_cb_autologin"
            app:layout_constraintTop_toBottomOf="@+id/login_ll_etcontainer" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_corner_button"
            android:text="@string/login_login"
            android:textSize="20dp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/login_btn_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_cl_container" />

</androidx.constraintlayout.widget.ConstraintLayout>