<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".presentation.ui.SignUpFragment">


    <ImageView
        android:id="@+id/signup_iv_profile"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:background="@drawable/signup_image_circle"
        android:clipToOutline="true"
        android:scaleType="centerCrop"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ic_person" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/signup_cl_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/login_corner_box_blue"
        android:padding="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_iv_profile">

        <LinearLayout
            android:id="@+id/signup_ll_etcontainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_corner_box_white"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/signup_et_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/login_id"
                android:maxLines="1"
                android:padding="12dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/start_button" />

            <EditText
                android:id="@+id/signup_et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/login_pw"
                android:maxLines="1"
                android:inputType="textPassword"
                android:padding="12dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/start_button" />

            <EditText
                android:id="@+id/signup_et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/signup_name"
                android:maxLines="1"
                android:padding="12dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/signup_tv_notify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_ll_etcontainer" />

        <EditText
            android:id="@+id/signup_et_intro"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/login_corner_box_white"
            android:hint="자기소개"
            android:gravity="left|top"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_tv_notify" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signup_btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_corner_button"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_et_intro" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>